--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
 <h1><b> GASHORA GIRLS ACADEMY CODING CAMP</b></h1>
+<img src= " image.jpg">
 <p> In december, at Gashora Girls Academy, we have guests from different it companies who have volunteered to teach the staff, teachers,
 and students about coding. That is why it is called <b> THE CODING CAMP</b>.</p>
 
