--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <head>
 <title>Vacation coding camp</title>
 </head>
-<body>
+<body background_color: yellow;>
 <h1><b> GASHORA GIRLS ACADEMY CODING CAMP</b></h1>
-<img src= " image.jpg">
+<img src= "WIN_20181212_10_35_19_Pro.jpg ";>
 <p> In december, at Gashora Girls Academy, we have guests from different it companies who have volunteered to teach the staff, teachers,
 and students about coding. That is why it is called <b> THE CODING CAMP</b>.</p>
 
+  </body>
 </html>
