--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <head>
 <title>Vacation coding camp</title>
 </head>
-<body background_color: yellow;>
+<body background_color: green;>
 <h1><b> GASHORA GIRLS ACADEMY CODING CAMP</b></h1>
-<img src= "WIN_20181212_10_35_19_Pro.jpg height = 200: widtgh= 150:";>
-<p> In december, at Gashora Girls Academy, we have guests from different it companies who have volunteered to teach the staff, teachers,
+<img src= "WIN_20181212_10_35_19_Pro.jpg  widtgh= 50%:";>
+<p> In december, at Gashora Girls Academy, we have guests from different it companies 
+  who have volunteered to teach the staff, teachers,
 and students about coding. That is why it is called <b> THE CODING CAMP</b>.</p>
 
   </body>
