--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body background_color: green;>
 <h1><b> GASHORA GIRLS ACADEMY CODING CAMP</b></h1>
-<img src="WIN_20181212_10_35_19_Pro.jpg" width=50>
+<img src="WIN_20181212_10_35_19_Pro.jpg" width=50%>
 <p> In december, at Gashora Girls Academy, we have guests from different it companies 
   who have volunteered to teach the staff, teachers,
 and students about coding. That is why it is called <b> THE CODING CAMP</b>.</p>
