--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Vacation coding camp</title>
 </head>
-<body style= "background-image: image.jpg";>
+<body style= "background-image: disney.png";>
 <h1><b> GASHORA GIRLS ACADEMY CODING CAMP</b></h1>
 <img src="WIN_20181212_10_35_19_Pro.jpg" width=50%>
 <p style= "color:chocolate;"> december, at Gashora Girls Academy, we have guests from different it companies 
