--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Vacation coding camp</title>
 </head>
-<body background="disney.png" width=100% height=100%;>
+<body background="disney.png" width=100%>
 <h1><b> GASHORA GIRLS ACADEMY CODING CAMP</b></h1>
 <img src="WIN_20181212_10_35_19_Pro.jpg" width=50%>
 <p style= "color:chocolate;"> december, at Gashora Girls Academy, we have guests from different it companies 
