--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <head>
 <title>Vacation coding camp</title>
 </head>
-<body background="disney.png" width=400px height=400px background-repeat= no repeat>
+<body style="background-repeat: no repeat;" background="disney.png">
 <h1><b> GASHORA GIRLS ACADEMY CODING CAMP</b></h1>
 <img src="WIN_20181212_10_35_19_Pro.jpg" width=50%>
-<p style= "color:chocolate;"> december, at Gashora Girls Academy, we have guests from different it companies 
+<p style="color:brown;"> december, at Gashora Girls Academy, we have guests from different it companies 
   who have volunteered to teach the staff, teachers,
 and students about coding. That is why it is called <b> THE CODING CAMP</b>.</p>
 
